@@ -112,7 +112,7 @@ type
 
     {IEvents}
     procedure WaitForEvent;
-    procedure AsyncWaitForEvent(EventHandler: TEventHandler);
+    procedure AsyncWaitForEvent(EventHandler: TEventHandler); override;
   end;
 
 implementation
@@ -298,7 +298,6 @@ begin
     if FInWaitState then
       IBError(ibxeInEventWait,[nil]);
 
-    CreateEventBlock;
     FEventHandler := EventHandler;
     callback := @IBEventCallback;
     with Firebird25ClientAPI do
