@@ -27,7 +27,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <CommandLineParams Value="-t 16"/>
+        <CommandLineParams Value="-t 10"/>
       </local>
       <environment>
         <UserOverrides Count="1">
