@@ -2,6 +2,9 @@ FBINTF Change Log  version                                      (1.0-1) Tue, 06 
 
 1. Limit maximum Blob segment read/write to MaxuShort
 
+2. Update Event Handling algorithm to avoid looping due to recreation of the
+   event block.
+
 FBINTF Change Log  version                                      (1.0-0) Tue, 06 Dec 2016 10:33:47 +0000
 
 1. Initial Release
